monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0279/A0279a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0279;

grammar A0279a {

  symbol A = Name Name;

  B = A;

}
